add radio and checkbox

--- a/03_tag_p.html
+++ b/03_tag_p.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html>
 <head>
 	<title>practicing</title>
 	<body>
@@ -5,3 +7,4 @@
 	</body>
 	<footer></footer>
 </head>
+</html>
